# ai-invention-42dac1-word-order-entropy-predicts-ordinal-tail

./: README.md
dataset_iter1_grambank_morpho/: README.md
dataset_iter1_grambank_morpho/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_grambank_morpho/src/: data.py  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter1_ud_sentence_max/: README.md
dataset_iter1_ud_sentence_max/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_ud_sentence_max/src/: mini_data_out.json
evaluation_iter3_family_audit_an/: README.md
evaluation_iter3_family_audit_an/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_family_audit_an/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter3_honest_mediatio/: README.md
evaluation_iter3_honest_mediatio/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_honest_mediatio/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter3_ordinal_validit/: README.md
evaluation_iter3_ordinal_validit/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_ordinal_validit/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter3_publication_fig/: README.md
evaluation_iter3_publication_fig/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_publication_fig/src/: eval.py  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
experiment_iter2_bound_awareness/: README.md
experiment_iter2_bound_awareness/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_bound_awareness/src/: full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_data_quality_va/: README.md
experiment_iter2_data_quality_va/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_data_quality_va/src/: method.py  (+5 more)
experiment_iter2_gev_tail_constr/: README.md
experiment_iter2_super_block_gev/: README.md
experiment_iter2_super_block_gev/src/: method_out.json  preview_method_out.json  pyproject.toml
research_iter1_ddm_effects_spo/: README.md
research_iter1_gev_fitting_met/: README.md
(+14 files in other folders)
