[project]
name = "eval-id1-it3-opus"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "attrs==26.1.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.5.0",
    "lmoments3==1.0.8",
    "loguru==0.7.3",
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==3.0.1",
    "patsy==1.0.2",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "referencing==0.37.0",
    "rpds-py==0.30.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "statsmodels==0.14.6",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
]
