[project]
name = "eval-id3-it3"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy==2.4.3",
    "pandas==3.0.1",
    "scipy==1.17.1",
    "statsmodels==0.14.6",
    "matplotlib==3.10.8",
    "loguru==0.7.3",
    "tqdm==4.67.3",
    "patsy==1.0.2",
    "pillow==12.1.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "kiwisolver==1.5.0",
    "packaging==26.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
]
