[project]
name = "super-block-gev"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "scipy==1.17.1",
    "lmoments3==1.0.8",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "loguru==0.7.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.1",
    "kiwisolver==1.5.0",
    "packaging==26.0",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
]
